--- a/crew.html
+++ b/crew.html
@@ -12,101 +12,159 @@
 	</head>
 
 	<body>
-		<header class="pt-[40px] pl-[55px] flex items-center justify-between">
+		<header
+			class="pt-[24px] md:pt-0 xl:pt-[40px] pl-[39px] xl:pl-[55px] flex items-center justify-between"
+		>
 			<a href="/">
-				<img
-					src="./images/header-bg-logo.svg"
-					alt="Site Logo"
-					width="48"
-					height="48"
-				/>
+				<img src="./images/logo.svg" alt="Site logo" width="48" height="48" />
 			</a>
 			<nav
-				class="nav-link w-[830px] relative bg-[rgba(255,255,255,0.04)] header-navbar py-[38px] pl-[123px] flex items-center gap-[48px]"
+				class="hidden md:w-[470px] md:flex xl:w-[830px] xl:flex relative bg-[#FFFFFF0a] backdrop-blur-md header-navbar py-[38px] pl-[48px] xl:pl-[123px] flex items-center gap-[37px] xl:gap-[48px]"
 			>
 				<span
-					class="w-[430px] absolute top-0 bottom-0 my-auto h-[1px] span-bg left-[-380px]"
+					class="w-[430px] absolute hidden xl:inline-block top-0 bottom-0 opacity-[4%] my-auto h-[2px] bg-[#ffffff] left-[-380px]"
 				></span>
 				<a
-					href="./index.html"
-					target="_blank"
+					href="/"
 					class="flex items-center gap-[12px] text-white relative group uppercase tracking-[2px]"
 				>
-					<strong class="font-bold">00</strong>
-					<p class="font-normal">HOME</p>
+					<strong class="font-bold hidden xl:block">00</strong>
+					<p
+						class="font-normal text-[14px] tracking-[2.36px] xl:text-[16px] xl:tracking-[2.7px]"
+					>
+						HOME
+					</p>
 					<span
 						class="absolute left-0 bottom-[-35px] w-full h-[3px] bg-white scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300"
 					></span>
 				</a>
 				<a
+					href="/destination.html"
 					class="flex items-center gap-[12px] text-white relative group uppercase tracking-[2px]"
-					href="./destination.html"
-					target="_blank"
 				>
-					<strong class="font-bold">01</strong>
-					<p class="font-normal">DESTINATION</p>
+					<strong class="font-bold hidden xl:block">01</strong>
+					<p
+						class="font-normal text-[14px] tracking-[2.36px] xl:text-[16px] xl:tracking-[2.7px]"
+					>
+						Destination
+					</p>
 					<span
 						class="absolute left-0 bottom-[-35px] w-full h-[3px] bg-white scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300"
 					></span>
 				</a>
-
 				<a
+					href="/crew.html"
 					class="flex items-center gap-[12px] text-white relative group uppercase tracking-[2px]"
-					href="#"
-					target="_blank"
 				>
-					<strong class="font-bold">03</strong>
-					<p class="font-normal">CREW</p>
+					<strong class="font-bold hidden xl:block">02</strong>
+					<p
+						class="font-normal text-[14px] tracking-[2.36px] xl:text-[16px] xl:tracking-[2.7px]"
+					>
+						CREW
+					</p>
 					<span
 						class="absolute left-0 bottom-[-35px] w-full h-[3px] bg-white scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300"
 					></span>
 				</a>
-
 				<a
+					href="/technology.html"
 					class="flex items-center gap-[12px] text-white relative group uppercase tracking-[2px]"
-					href="./technology.html "
-					target="_blank"
 				>
-					<strong class="font-bold">04</strong>
-					<p class="font-normal">TECHNOLOGY</p>
+					<strong class="font-bold hidden xl:block">03</strong>
+					<p
+						class="font-normal text-[14px] tracking-[2.36px] xl:text-[16px] xl:tracking-[2.7px]"
+					>
+						Technology
+					</p>
 					<span
 						class="absolute left-0 bottom-[-35px] w-full h-[3px] bg-white scale-x-0 group-hover:scale-x-100 origin-center transition-transform duration-300"
 					></span>
 				</a>
 			</nav>
+			<button id="menu-btn" class="block pr-[24px] md:hidden">
+				<img
+					src="./images/menu-icon.svg"
+					alt="Menu icon"
+					width="24"
+					height="21"
+				/>
+			</button>
 		</header>
+		<div
+			id="sidebar"
+			class="fixed top-0 right-0 h-full w-2/3 sm:w-1/2 bg-gradient-to-b from-black to-gray-900 text-white transform translate-x-full transition-transform duration-300 ease-in-out z-40"
+		>
+			<button id="close-btn" class="absolute top-6 right-6">
+				<svg
+					class="w-8 h-8"
+					fill="none"
+					stroke="white"
+					stroke-width="2"
+					viewBox="0 0 24 24"
+				>
+					<path
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						d="M6 18L18 6M6 6l12 12"
+					/>
+				</svg>
+			</button>
+
+			<nav
+				class="mt-24 ml-8 space-y-8 text-lg tracking-widest font-light uppercase"
+			>
+				<a href="/" class="block"><span class="font-bold">00</span> Home</a>
+				<a href="/destination.html" class="block"
+					><span class="font-bold">01</span> Destination</a
+				>
+				<a href="/crew.html" class="block"
+					><span class="font-bold">02</span> Crew</a
+				>
+				<a href="/technology.html" class="block"
+					><span class="font-bold">03</span> Technology</a
+				>
+			</nav>
+		</div>
 		<main>
-			<section class="containers flex gap-[90px]">
+			<section
+				class="containers flex flex-col xl:flex-row gap-[90px] text-center md:text-center xl:text-start"
+			>
 				<div>
-					<div class="flex gap-[24px] pt-[76px]">
+					<div
+						class="flex gap-[16px] xl:gap-[24px] pt-[76px] justify-center xl:justify-start"
+					>
 						<span
-							class="font-barlow font-semibold text-[28px] leading-[1] tracking-[4.72px] span-clr"
+							class="font-barlow font-semibold text-[16px] md:text-[20px] xl:text-[28px] leading-[1] tracking-[2.7px] md:tracking-[3.38px] xl:tracking-[4.72px] span-clr"
 							>02</span
 						>
 						<p
-							class="text-[#FFFFFF] font-barlow font-normal text-[28px] leading-[1] tracking-[4.72px] uppercase"
+							class="text-[#FFFFFF] font-barlow font-normal text-[16px] md:text-[20px] xl:text-[28px] leading-[1] tracking-[2.7px] md:tracking-[3.38px] xl:tracking-[4.72px] uppercase"
 						>
 							Meet your crew
 						</p>
 					</div>
-					<div class="pt-[154px]">
+					<div
+						class="pt-[80px] xl:pt-[154px] mx-auto max-w-[327px] md:max-w-[454px] xl:max-w-[486px]"
+					>
 						<span
-							class="font font-normal text-[32px] leading-[1] uppercase text-[#D0D6F9] strong-clr"
+							class="font-normal text-[24px] xl:text-[32px] leading-[1] uppercase text-[#D0D6F9] strong-clr"
 							>Commander
 						</span>
 						<h2
-							class="font w-[500px] font-normal text-[56px] leading-[1] text-[#FFFFFF] uppercase pt-[15px]"
+							class="font-['Bellefair'] max-w-[500px] font-normal text-[40px] xl:text-[56px] leading-[1] text-[#FFFFFF] uppercase pt-[8px] xl:pt-[15px]"
 						>
 							Douglas Hurley
 						</h2>
 						<p
-							class="w-[444px] font-normal text-[18px] leading-[32px] text-[#D0D6F9] pt-[27px] pb-[76px]"
+							class="max-w-[444px] font-normal text-[18px] leading-[32px] text-[#D0D6F9] pt-[27px] pb-[76px]"
 						>
 							Douglas Gerald Hurley is an American engineer, former Marine Corps
 							pilot and former NASA astronaut. He launched into space for the
 							third time as commander of Crew Dragon Demo-2.
 						</p>
-						<div class="flex items-center justify-start gap-[24px]">
+						<div
+							class="flex items-center xl:justify-start justify-center gap-[24px]"
+						>
 							<a
 								href="#"
 								target="_blank"
@@ -130,8 +188,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="pt-[62px]">
+				<div class="pt-[24px] pb-0 md:pt-[62px] md:pb-[94px]">
 					<img
+						class="mx-auto max-w-[327px] md:max-w-[456px]"
 						src="./images/image-removebg-preview(289).png"
 						alt="crew people"
 						width="568"
@@ -140,6 +199,19 @@
 				</div>
 			</section>
 		</main>
+		<script>
+			const menuBtn = document.getElementById('menu-btn')
+			const closeBtn = document.getElementById('close-btn')
+			const sidebar = document.getElementById('sidebar')
+
+			menuBtn.addEventListener('click', () => {
+				sidebar.classList.remove('translate-x-full')
+			})
+
+			closeBtn.addEventListener('click', () => {
+				sidebar.classList.add('translate-x-full')
+			})
+		</script>
 		<script src="https://cdn.tailwindcss.com"></script>
 		<script>
 			tailwind.config = {
